<resources>
    <string name="app_name">PLN Service</string>
    <string name="selamat">PLN Service</string>
    <string name="versi">Versi Beta</string>
    <string name="title1">Keluhan</string>
    <string name="title2">Profile</string>
    <string name="title3">Notifikasi</string>
    <string name="desikripsi1">Jika terjadi gangguan silahkan menghubungi kami.</string>
    <string name="desikripsi2">Jika anda pindah rumah silahkan lengkapi alamat anda. </string>
    <string name="desikripsi3">Jika menerima notifikasi tanda keluhan anda sudah kami proses.</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="no_tampe">ID PELANGGAN</string>
    <string name="password">PASSWORD</string>
    <string name="ulpassword">ULANG PASSWORD</string>
    <string name="tanya">Belum daftar? <u>Daftar Sekarang</u></string>
    <string name="tanya2">Saya setuu dengan <u>Syarat dan Kententuan</u> PT.PLN</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AuthFailureError">Cek Koneksi Anda</string>
    <string name="ServerError">Server Error</string>
    <string name="ParseError">Pengambilan Data Gagal</string>
    <string name="NoConnectionError">Tidak Ada Koneksi</string>
    <string name="networkerror">Tidak Ada Koneksi</string>
    <string name="keluhan">Keluhan</string>
    <string name="jam">Jam</string>
    <string name="tanggal">Tanggal</string>
    <string name="TimeoutError">Koneksi Time Out</string>
    <string name="tanya3">Pilih kondisi saat gangguan :</string>
    <string name="satu">1 Rumah</string>
    <string name="sebagian">Sembagian</string>
    <string name="menyeluruh">Menyeluruh</string>
    <string name="putus">Putus pada sambungan rumah(SR)</string>
    <string name="jtr">Gangguan JTR</string>
    <string name="app">Gangguan App</string>
    <string name="terbakar">MCB Terbakar</string>
    <string name="kwh">Gangguan KWH Meter</string>
    <string name="loncer">MCB Loncer</string>
    <string name="kotak">Tekan Kotak Untuk Mengambil Gambar</string>
    <string name="kondisi">Pilih Kondisi Saat Terjadi Gangguan</string>
    <string name="textbuttonkel">Kirim Keluhan</string>
    <string name="padam">Padam</string>
    <string name="gangguan">Gangguan</string>
    <string name="mcb">MCB</string>
    <string name="lpb">LPB Muncul Tanda Periksa</string>
    <string name="belumdiambil">Belum Mengambil Foto</string>
    <string name="nama">Ihsan Abdurahman</string>
    <string name="alamat">Pelabuhan Ratu</string>
    <string name="nohp">081573686769</string>
    <string name="tentang">Tentang dan No HP</string>
    <string name="namapelanggan">Nama Pelanggan</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
