<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin9dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_abu"
            android:orientation="horizontal">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/gambar_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin9dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin9dp">

                <com.sundevs.ihsan.plnservice.util.FontLatoSemiBold
                    android:id="@+id/jam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jam"
                    android:textColor="@color/hitam"
                    android:textSize="15dp" />

                <com.sundevs.ihsan.plnservice.util.FontLatoSemiBold
                    android:id="@+id/tnggl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:textColor="@color/hitam"
                    android:textSize="15dp" />

                <com.sundevs.ihsan.plnservice.util.FontLatoSemiBold
                    android:id="@+id/keluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keluhan"
                    android:textColor="@color/hitam"
                    android:textSize="15dp" />
                <com.sundevs.ihsan.plnservice.util.FontLatoSemiBold
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keluhan"
                    android:textColor="@color/hitam"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>


</LinearLayout>